--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "express": "4.16.2",
     "faker": "4.1.0",
     "jsonwebtoken": "8.1.0",
+    "moment": "2.19.3",
     "passport": "0.4.0",
     "passport-jwt": "3.0.0",
     "twilio": "^3.7.0",
